Fix text alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,17 @@
 html {font-size: 1em;
   background color: #ffb6c1;
+  box-sizing: border-box;
+  }
+
+  *, *::before, *::after {
+    box-sizing: inherit;
+  }
 }
 
 
 p {margin-bottom: 1.3em;
-  width: 100%
+  width: 100%;
+  display:block;
 }
 
 h1, h2, h3, h4 {
@@ -38,25 +45,20 @@ small, .font_small {font-size: 0.707em;}
  background-color: #ffb6c1;
 }
 
-@media only screen and (min-width: 30em) {
 
-
-
-}
 
 
 @media only screen and (min-width: 68em) {
 
   .red {
     background-color: #da353c;
+
+
   }
 
-
-
-}
-
-@media only screen and (min-width: 90em) {
-
+  .blue {
+    background-color: #8FE1DB;
+  }
 
 
 }
